[458225] CachingTransport strategy improved, Test added; allow running tests from maven like from eclipse; parameter skip.version.tests to skip only version tests
Change-Id: Ic5940cfeb60b513bddce47943fcffb199bc24c1c
Signed-off-by: Christian Schneider <schneider@yatta.de>